# configuration_service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: API_REFERENCE.md  COMPARISON.md  DEVICE_LOCKING_PROPOSAL.md  STANDALONE_PV_PROPOSAL.md  configuration-service-openapi.yaml
docs/explanation/: architecture.md  device-locking.md
docs/how-to/: deploy-systemd.md  load-profiles.md  manage-devices.md  manage-metadata.md  manage-pvs.md  run-the-service.md
docs/reference/: api.md  configuration.md  models.md
docs/tutorials/: getting-started.md
scripts/: demo-kreios.sh  demo.sh
src/: __init__.py
src/configuration_service/: __init__.py  class_capabilities.py  cli.py  config.py  device_registry_store.py  loader.py  lock_manager.py  main.py  metadata_store.py  models.py  protocols.py  script_loader.py  standalone_pv_store.py
tests/: README.md  conftest.py  test_beamline_profiles.py  test_config_api.py  test_config_models.py  test_device_changes.py  test_device_crud.py  test_device_locking.py  test_integration_caproto.py  test_integration_sim.py  test_metadata_store.py  test_profile_formats.py  test_standalone_pv_crud.py
